src/scss/parts/elements/typography.scss
/* Remove default margin in favour of better control in authored CSS */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin-block-end: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 1em 0 0.5em;
}

:is(h1 a, h2 a, h3 a, h4 a, h5 a, h6 a) {
  color: currentColor;
  text-decoration: underline;
  text-decoration-color: transparent;
  transition: text-decoration-color
    var(--wp--custom--transition-timing--default);
}

p {
  margin: 1em 0;
}

.has-text-align-center {
  text-align: center;
}

.has-text-align-left {
  text-align: left;
}

.has-text-align-right {
  text-align: left;
}

